<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#00F9FF"
        android:onClick="btnExit"
        android:text="@string/exit"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="26dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <TextView
        android:id="@+id/textview1"
        android:layout_width="164dp"
        android:layout_height="53dp"
        android:layout_marginTop="-300dp"
        android:layout_marginEnd="-80dp"
        android:text="Hello World!"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.376"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:backgroundTint="#00F9FF"
        android:onClick="btnStart"
        android:text="@string/start"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="325dp"
        android:layout_height="94dp"
        android:layout_marginTop="180dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:shadowColor="#000000"
        android:shadowDx="15"
        android:shadowDy="10"
        android:shadowRadius="5"
        android:text="@string/KYMAI"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#00F9FF"
        android:textColorHighlight="#000000"
        android:textColorHint="#504F4F"
        android:textScaleX="@dimen/material_emphasis_high_type"
        android:textSize="80sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="234dp"
        android:layout_height="29dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:shadowColor="#000000"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/description"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#C0C0C0"
        android:textColorHighlight="#000000"
        android:textColorHint="#504F4F"
        android:textScaleX="@dimen/material_emphasis_high_type"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>