<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectMenu"
    android:background="@drawable/backgroud"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:shadowColor="#000000"
                android:shadowDx="15"
                android:shadowDy="10"
                android:shadowRadius="5"
                android:text="@string/KYMAI"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#00F9FF"
                android:textColorHighlight="#000000"
                android:textColorHint="#504F4F"
                android:textScaleX="@dimen/material_emphasis_high_type"
                android:textSize="80sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

            <Button
                android:id="@+id/btnSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#00F9FF"
                android:onClick="btnSendImg"
                android:text="@string/send"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="26dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="255dp"
                android:layout_height="250dp"
                android:scaleType="fitCenter"
                tools:srcCompat="@tools:sample/avatars" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <Button
                android:id="@+id/btnReturn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#00F9FF"
                android:onClick="btnReturn"
                android:text="@string/rtn"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="26dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <Button
                android:id="@+id/btnCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#00F9FF"
                android:onClick="btnOpenCamera"
                android:text="@string/camera"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="26dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnGallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#00F9FF"
                android:onClick="btnOpenGallery"
                android:text="@string/gallery"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="26dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:shadowColor="#000000"
                android:shadowDx="15"
                android:shadowDy="10"
                android:shadowRadius="5"
                android:text="@string/select_description"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#00F9FF"
                android:textColorHighlight="#000000"
                android:textColorHint="#504F4F"
                android:textScaleX="@dimen/material_emphasis_high_type"
                android:textSize="60sp"
                android:textStyle="bold|italic" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>